--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -2,9 +2,19 @@ body {
   font-family: sans-serif;
 }
 
-#statepolygons path,
-#statepolygons line {
+#state {
+  fill: #aaa;
+}
+
+#state .active {
+  fill: orange;
+}
+
+#state-borders {
   fill: #9a9a9a;
   stroke: none;
   stroke-width: 2;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
 }
