--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -2,21 +2,16 @@ body {
   font-family: sans-serif;
 }
 
-#state {
-  fill: #aaa;
+#map-background {
+  fill: transparent;
 }
 
-#state .active {
-  fill: orange;
-}
-
-#state-borders {
-  fill: #9a9a9a;
-  stroke: none;
-  stroke-width: 2;
+.state {
+  fill: #DCDCDC;
+  stroke: transparent;
+  stroke-width: 0;
   stroke-linejoin: round;
   stroke-linecap: round;
-  pointer-events: none;
 }
 
 #slideraxis path,
