--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -2,6 +2,12 @@ body {
   font-family: sans-serif;
 }
 
+.maptitle {
+  text-anchor: middle;
+  font-size: 20px;
+  font-weight: bold;
+}
+
 #statepolygons path,
 #statepolygons line {
   fill: #9a9a9a;
