Buttons for switching categories #21

--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -1,10 +1,6 @@
-body {
-  font-family: sans-serif;
-}
-
 #maptitle {
   text-anchor: middle;
-  font-size: 20px;
+  font-size: 2em;
   font-weight: bold;
 }
 
