--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -36,3 +36,19 @@
 .dragging {
   cursor: move; /* was using grabbing, but that only works in Firefox*/
 }
+
+.tooltip {
+	  position: absolute;
+  	padding: 5px;
+  	background-color: white;
+  	border-radius: 10px;
+  	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+}
+
+.hidden {
+	display: none;
+}
+
+.shown {
+	display: block;
+}
