--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -70,23 +70,23 @@ body {
     opacity:1;
   }
   
-  .Total{
+  .total{
     background:rgb(46, 134, 171);
   }
   
-  .Thermoelectric{
+  .thermoelectric{
     background:rgb(252,186,4);
   }
   
-  .Public{
+  .publicsupply{
     background:rgb(186,50,40);
   }
   
-  .Irrigation{
+  .irrigation{
     background:rgb(155,197,61);
   }
   
-  .Industrial{
+  .industrial{
     background:rgb(138,113,106);
   }
 }
