--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -39,10 +39,12 @@
 
 .tooltip {
 	  position: absolute;
-  	padding: 5px;
+  	padding: 5px 10px;
   	background-color: white;
-  	border-radius: 10px;
-  	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+  	border:1px solid rgb(190,190,190);
+  	border-radius: 3px;
+  	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  	line-height:1.5em;
 }
 
 .hidden {
