--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -3,6 +3,14 @@
   margin:0;
 }
 
+/*IE SVG Width Fix*/
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none){
+    #content-container svg{
+      width:100%;
+      height:608px;
+    }
+}
+
 body {
   font-family: sans-serif;
 }
