--- a/layout/css/custom.css
+++ b/layout/css/custom.css
@@ -3,18 +3,6 @@
   margin:0;
 }
 
-/*IE SVG Width Fix*/
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none){
-    #content-container svg{
-      width:100%;
-      height:608px;
-    }
-}
-
-body {
-  font-family: sans-serif;
-}
-
 #button-container{
   text-align: center;
   position: relative;
@@ -25,12 +13,15 @@ body {
     width:19%;
     padding: 10px 0;
     font-size:.5em;
-    border:1px solid rgb(100,100,100);
     outline:none;
-    cursor:pointer;
     opacity:.5;
     margin-right:1%;
-    border-radius:3px;
+    border: none;
+    -moz-user-select: none; 
+    -webkit-user-select: none; 
+    -ms-user-select:none; 
+    user-select:none;
+    -o-user-select:none;
   }
   
   #button-container button:last-child{
@@ -61,17 +52,13 @@ body {
   button.industrial{
     background:rgb(138,113,106);
   }
+  
+  .selected{
+    opacity:1;
+  }
 
 @media screen and (min-width:580px){
   #button-container button{
     font-size:.9em;
   }
-}
-
-@media screen and (min-width: 1024px){
-  #content-container{
-    width:960px;
-    margin:0 auto;
-  }
-  
 }
