--- a/layout/css/custom.css
+++ b/layout/css/custom.css
@@ -16,7 +16,7 @@
     outline:none;
     opacity:.5;
     margin-right:1%;
-    border: none;
+    border: 3px;
     -moz-user-select: none; 
     -webkit-user-select: none; 
     -ms-user-select:none; 
