watermark add-on

--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -70,3 +70,11 @@
 .shown {
 	display: block;
 }
+
+.watermark {
+  cursor: pointer;
+  fill: #DCDCDC;
+  stroke: #c6c6c6;
+  stroke-width:0.5;
+  opacity: 0.8;
+}
