--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -9,8 +9,12 @@
 }
 
 .state {
+  fill: transparent;
+  stroke: black;
+  stroke-width: 1.5;
   stroke-linejoin: round;
   stroke-linecap: round;
+  pointer-events: none;
 }
 
 .county {
