use classes and fxns to change county style on zoom or hover

--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -23,6 +23,14 @@
   stroke-width: 0.2;
 }
 
+.emphasize-county {
+  fill: pink;
+}
+
+.highlighted-county {
+  fill: darkgrey;
+}  
+
 .hidden-border {
   stroke: transparent;
   stroke-width: 0;
