revert back to using css rather than js transitions for style switches

--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -23,6 +23,15 @@
   stroke-width: 0.2;
 }
 
+.show-county-bounds {
+  stroke: darkgrey;
+}
+
+/* must be listed before highlighted-county*/
+.emphasize-county {
+  fill: pink;
+}
+
 .highlighted-county {
   fill: darkgrey;
 } 
