--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -11,10 +11,15 @@
 .state {
   fill: transparent;
   stroke: black;
-  stroke-width: 1.5;
+  stroke-width: 1.0;
+  stroke-dasharray: 0;
   stroke-linejoin: round;
   stroke-linecap: round;
   pointer-events: none;
+}
+
+.nonfocal-state {
+  stroke-dasharray: 2,2;
 }
 
 .county {
