--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -29,8 +29,9 @@
 }
 
 /* must be listed before highlighted-county*/
+/* THIS IS WHAT WILL MAKE THE ZOOMED IN STATE EMPHASIZED*/
 .emphasize-county {
-  fill: #d7d7d7; /* light-ish grey */
+  fill: #e3e3e3; /* light-ish grey */
 }
 
 .highlighted-county {
