--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -48,7 +48,7 @@ Generating electricity uses large amounts of water. In most large <b>thermoelect
      </li>
      <li>
 <p>
-<em>Aquaculture, mining, and livestock</em> water uses are distributed unevenly across the US. Self-supplied domestic use, where a homeowner uses a private well for household water, is larger where public supply systems do not reach significant groups of homes. There are large withdrawals for aquaculture in southern Idaho and western North Carolina, and other counties around the country have large withdrawals of domestic, livestock, aquaculture, and mining. Together these other uses make up 5 percent of total withdrawals.
+<b>Aquaculture, mining, and livestock</b> water uses are distributed unevenly across the US. Self-supplied domestic use, where a homeowner uses a private well for household water, is larger where public supply systems do not reach significant groups of homes. There are large withdrawals for aquaculture in southern Idaho and western North Carolina, and other counties around the country have large withdrawals of domestic, livestock, aquaculture, and mining. Together these other uses make up 5 percent of total withdrawals.
 <\p>
 
 [static version of #view=USA&category=piechart ]
