--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -5,20 +5,19 @@
     <p>
     You might expect water use to be proportional to the population in a county, but in fact this is only partly true - public supply water use is indeed roughly proportional to urban population size:
     </p>    
-    <div class="public-plot"></div>
+    <div id="public-plot"></div>
     [ plot of public supply vs population ]
 <p>    
 but <b>total</b> water use is not!
 </p>  
-    <div class="total-plot"></div>
+    <div id="total-plot"></div>
     [ plot of total use vs population ]
 
   
     <p>
     This discrepancy exists because several major water-using activities occur on large scales and are best suited to specific locations, for both natural and economic reasons. Like these:
     </p>
-  <div class="water-use-types"></div>    
-    
+
     <ul>
     
      <li>
