get svg into key story

--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -42,7 +42,7 @@
     Curabitur a molestie sapien. Phasellus ullamcorper dui at ultricies condimentum. Aenean commodo facilisis tempus. Nam id nisi maximus, tristique ante et, semper lorem. Ut aliquet lorem sed tortor bibendum, vel condimentum libero rutrum. Nulla blandit lorem consequat, convallis justo vel, blandit lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas nec arcu eget tortor vulputate faucibus. Pellentesque sodales sapien et urna sagittis pulvinar. Phasellus et tempor nisl, nec condimentum purus. Etiam et est sagittis, pretium eros eu, imperdiet tellus.
     </p>
     
-     <div class="key-story-plot"></div>
+     <div class="key-story-plot" id="rank-states-interactive"></div>
      
      <p>
     Curabitur a molestie sapien. Phasellus ullamcorper dui at ultricies condimentum. Aenean commodo facilisis tempus. Nam id nisi maximus, tristique ante et, semper lorem. Ut aliquet lorem sed tortor bibendum, vel condimentum libero rutrum. Nulla blandit lorem consequat, convallis justo vel, blandit lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas nec arcu eget tortor vulputate faucibus. Pellentesque sodales sapien et urna sagittis pulvinar. Phasellus et tempor nisl, nec condimentum purus. Etiam et est sagittis, pretium eros eu, imperdiet tellus.
