update after review

--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -89,5 +89,7 @@ Dieter, C.A., Maupin, M.A., Caldwell, R.R., Harris, M.A., Ivahnenko, T.I., Lovel
      <p>
 Dieter, C.A., Linsey, K.S., Caldwell, R.R., Harris, M.A., Ivahnenko, T.I., Lovelace, J.K., Maupin, M.A., and Barber, N.L., 2017, <i>Estimated use of water in the United States county-level data for 2015</i>: U.S. Geological Survey data release, <a href="https://doi.org/10.5066/F7TB15V5">https://doi.org/10.5066/F7TB15V5</a>.
     </p>
-    
+    {{#sections }}
+    {{{ . }}}
+    {{/sections }}
 </div>
