data and js for national pie setup

--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -2,6 +2,8 @@
 
   <h2>How do we use water in the U.S.?</h2>
   
+    <div class="key-story-plot" id="national-pie"></div>
+  
     <p>
     You might expect water use to be proportional to the population in a county, but in fact this is only partly true - public supply water use is indeed roughly proportional to urban population size:
     </p>    
