--- a/layout/css/custom.css
+++ b/layout/css/custom.css
@@ -38,6 +38,20 @@
   width:100%;
 }
 
+.label-text {
+    alignment-baseline: middle;
+    font-size: 12px;
+    font-family: arial,helvetica,"sans-serif";
+    fill: #393939;
+}
+.label-line {
+    stroke-width: 1;
+    stroke: #393939;
+}
+.label-circle {
+    fill: #393939;
+}
+
 #button-container{
   text-align: center;
   position: relative;
