key stories static map. I know this is hacked

--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -5,61 +5,13 @@
     <div class="key-story-plot" id="national-pie"></div>
   
     <p>
-    You might expect water use to be proportional to the population in a county, but in fact this is only partly true - public supply water use is indeed roughly proportional to urban population size:
-    </p>    
-    <div id="public-plot"></div>
-    [ plot of public supply vs population ]
-<p>    
-but <b>total</b> water use is not!
-</p>  
-    <div id="total-plot"></div>
-    [ plot of total use vs population ]
-
-  
-    <p>
-    This discrepancy exists because several major water-using activities occur on large scales and are best suited to specific locations, for both natural and economic reasons. Like these:
-    </p>
-
-    <ul>
     
-     <li>
-     <p>
-<b>Agriculture</b> occurs all across the country, but especially where there are fewer people, good soils, and plenty of sunshine. This is why the West withdraws lots of water to supplement the region's meager rainfall.
-     </p>
-
-     [static plot of #view=USA&category=irrigation]
-
-     </li>
-     <li>
-     <p>
-Generating electricity uses large amounts of water. In most large <b>thermoelectric</b> power plants where water is heated to generate steam and drive the turbines, water is needed to cool the steam back to water so it can be reused. In the eastern U.S. where water is relatively abundant, large volumes of water are often withdrawn, used once for cooling, then returned to the source a little warmer than it started. Where water is scarcer, more thermoelectric plants withdraw smaller volumes of cooling water and recycle it many times in cooling towers or ponds, returning much less to the source.
-</p>
-
-[static version of #view=USA&category=thermoelectric ]
-
-     </li>
-     
-     <li>
-<p>
-<b>Industrial</b> withdrawals are use is driven by a combination of social drivers and proximity to water. For example, Lake County, Indiana accounts for 8% of the country's industrial water withdrawals use even though it accounts for only 0.15% of the US population. This can be explained by Lake County's proximity to an easy water source (Lake Michigan) and a large labor force (Chicago), which has led, in part, to a concentration of industries in the steel, aluminum, and metals fabrication businesses.
-</p>
-
-[static version of #view=USA&category=industrial]
-
-     </li>
-     <li>
-<p>
-<b>Aquaculture, mining, and livestock</b> water uses are distributed unevenly across the US. Self-supplied domestic use, where a homeowner uses a private well for household water, is larger where public supply systems do not reach significant groups of homes. There are large withdrawals for aquaculture in southern Idaho and western North Carolina, and other counties around the country have large withdrawals of domestic, livestock, aquaculture, and mining. Together these other uses make up 5 percent of total withdrawals.
-<\p>
-
-[static version of #view=USA&category=piechart ]
-
-     </li>
-    </ul>
-    
-    <p>
-As a result of all this variation in how we use water, total water use differs greatly among statesis not simply proportional to population. Can you guess how your state ranks in total water use and use by category?
     </p>
+    <div class="key-story-plot" id="national-static-pie">
+    
+      <img src = "images/WU_stories_static.png" alt = "Test Image" />
+    
+    </div>
     <div class="key-story-plot" id="rank-states-interactive"></div>
  
 [MVP: static plot of states ranked by water use]
