--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -8,9 +8,9 @@
     
     </p>
     <div class="key-story-plot" id="national-static-pie">
-    
-      <img src = "images/WU_stories_static.png" alt = "Test Image" />
-    
+    <figure>
+     {{{ figure }}}
+    </figure>
     </div>
     <div class="key-story-plot" id="rank-states-interactive"></div>
  
