--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -9,7 +9,7 @@
     </p>
     <div class="key-story-plot" id="national-static-pie">
     <figure>
-     {{{ figure }}}
+     {{{ pie_map_plot }}}
     </figure>
     </div>
     <div class="key-story-plot" id="rank-states-interactive"></div>
