--- a/layout/templates/mobileMapUI.mustache
+++ b/layout/templates/mobileMapUI.mustache
@@ -5,7 +5,7 @@
         {{{selectArrows}}}
       </div>
       <select class="view-select">
-        <option value="United States">United States - Water Use</option>
+        <option value="USA">United States - Water Use</option>
       </select>
     </div>
      <div class="custom-select county-custom-select">
