zoom button functional, basic hide or not if view is USA

--- a/layout/templates/mobileMapUI.mustache
+++ b/layout/templates/mobileMapUI.mustache
@@ -18,6 +18,6 @@
     </div>
   </div>
   <div class="zoom-out-button-container">
-    <button class="zoom-out-button">Zoom Out</button>
+    <button class="zoom-out-button hidden">Zoom Out</button>
   </div>
 </div>
