--- a/layout/templates/mobileMapUI.mustache
+++ b/layout/templates/mobileMapUI.mustache
@@ -17,7 +17,7 @@
       </select>
     </div>
   </div>
-  <div class="zoom-out-button-container">
-    <button class="zoom-out-button hidden">Zoom Out</button>
+  <div class="zoom-out-button-container hidden">
+    <button class="zoom-out-button">Zoom Out</button>
   </div>
 </div>
