--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -5,8 +5,7 @@
 
 .state {
   fill: transparent;
-  stroke: black;
-  stroke-width: 1.5;
+  stroke: rgb(180,180,180);
   stroke-linejoin: round;
   stroke-linecap: round;
   pointer-events: none;
@@ -24,11 +23,13 @@
 /* must be listed before highlighted-county*/
 /* THIS IS WHAT WILL MAKE THE ZOOMED IN STATE EMPHASIZED*/
 .emphasize-county {
-  fill: #e3e3e3; /* light-ish grey */
+  fill: rgb(230,230,230);
+  stroke: rgb(200,200,200);
 }
 
 .highlighted-county {
-  fill: #bdbdbd; /* dark-ish grey */
+  stroke: rgb(200,200,200);
+  fill: rgb(240,240,240);
 } 
 
 .wu-circle {
