adjust how mobile vs desktop styles are added and named

--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -10,11 +10,11 @@
   stroke-linecap: round;
 }
 
-.state-desktop {
+.state-click-off {
   pointer-events: none;
 }
 
-.state-mobile {
+.state-click-on {
   fill: white;
   fill-opacity: 0;
   pointer-events: fill;
