transition wasn't actually doing anything, but still doesn't flash from big outline to small

--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -16,6 +16,10 @@
   stroke: transparent;
 }
 
+.show-county-bounds {
+  stroke: #bdbdbd;
+}
+
 /* must be listed before highlighted-county*/
 /* THIS IS WHAT WILL MAKE THE ZOOMED IN STATE EMPHASIZED*/
 .emphasize-county {
