--- a/layout/css/custom.css
+++ b/layout/css/custom.css
@@ -111,6 +111,17 @@
   margin-top:20px;
 }
 
+#directions {
+  padding-left: 20px;
+  padding-right: 40px;
+}
+
+#directions p{
+  font-size:0.9em;
+  font-style: italic;
+  text-align: left;
+  color: rgb(169,169,169);
+}
 
 .key-story-plot{
   min-height:200px;
@@ -183,5 +194,12 @@
   }
   .mobile-UI-Container{
     display:none;
+  }
+}
+
+/* really large desktop screens*/
+@media screen and (min-width:1050px){
+  #directions {
+    width: 45%;
   }
 }
