--- a/layout/templates/directions_text.mustache
+++ b/layout/templates/directions_text.mustache
@@ -1,15 +1,8 @@
-<div id="interactive-fig-directions" class="viz-text">
+<div id="directions" class="viz-text">
 
-  <h3>How to use the map:</h3>
-  
   <p>
-    Explore how water is used throughout the United States. Click or 
-    hover over on any of the specific use-case boxes below the map to 
-    discover how thermoelectric, public supply, irrigation, or industrial 
-    water use is distributed. Click on a state to zoom in to more easily see the
-    difference in county use. Once zoomed in, simply click anywhere outside
-    the state on the map to return to the full country view. Hover (tap on 
-    mobile) over any of the individual counties to get more information.
+    Interact with the figure by clicking/hovering on the map or categories. Click 
+    the map to zoom in and look more closely at counties.
   </p>
 
 </div>
