general text updates/deletes/moves + make fig caption for national pie fig also

--- a/layout/templates/directions_text.mustache
+++ b/layout/templates/directions_text.mustache
@@ -1,4 +1,4 @@
-<div id="directions" class="viz-text">
+<div id="fig-caption" class="viz-text">
 
   <p>
     Interact with the figure by clicking/hovering on the map or categories. Click 
