--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -4,14 +4,20 @@
   
     <div class="key-story-plot" id="national-pie">
     <p>
-    The U.S. states and territories used X billion gallons per day in 2015. This amount of water is approximately equal to YY (Some percentage of Lake Erie?). We use water in different ways to serve many economically and culturally important needs. The breakdown of different water uses is as follows:
+    The U.S. states and territories used over 322 billion gallons per day in 2015. This amount of water is approximately equal to YY (Some percentage of Lake Erie?). We use water in different ways to serve many economically and culturally important needs. The national breakdown of different water uses is as follows:
     </p>
     </div>
   
+  <div id="fig-caption">
     <p>
-    Viewing the four major water-use categories at one time gives a better picture of the relative sizes of the withdrawals and the major water uses by county. Larger withdrawals generally are for irrigation or a combination of irrigation and public supply in the West, and thermoelectric power in the East. These three categories make up 90 percent of 2015 withdrawals. Industrial use, making up 5 percent of the total, can be spotted on the Gulf Coast and in Indiana, among other locations. A few counties show significant withdrawals for categories other than the 4 largest, such as aquaculture withdrawals in southern Idaho and western North Carolina. The remaining 4 categories of domestic, livestock, aquaculture, and mining together make up 5 percent of total withdrawals. See the map below for specific findings:
-
+    Domestic, livestock, aquaculture, and mining compose the "other" category and togther make up 5 percent of total withdrawals.
     </p>
+  </div>
+  
+    <p>
+    Although thermoelectric and irrigation are the most dominant categories nationally, the county breakdown reveals regional differences in water use distribution. Below is a map that shows all cateogries for each county at one time. While you can still see that irrigation and thermoelectric are the largest, there is a stark contrast between the East, where thermoelectric is dominant, and the West, where irrigation is dominant. See the map below for specific findings:
+    </p>
+    
     <div class="key-story-plot" id="national-static-pie">
     <figure>
      {{{ pie_map_plot }}}
@@ -23,21 +29,15 @@
     <div class="key-story-plot" id="rank-states-interactive"></div>
     
  
-<p>
-Note that not all water "use" is the same - some use is "consumptive" in the sense that it takes water out of the natural cycle by evaporation, transpiration [link to water science school?], or incorporating into a product, or by redirecting it to sewage drains (?), while other uses return the water to rivers or aquifers (possibly after adding heat or contaminants). Of the water withdrawn for irrigation, 62 percent is evaporated or transpired by crops and won't re-enter the natural water cycle until the next rainfall, possibly far away from the point of water withdrawal. For thermoelectric power, consumptive use is 3 percent; the rest is returned to rivers or lakes, albeit warmer than before.
- </p>
+  <p>
+    Note that not all water "use" is the same - some use is "consumptive" in the sense that it takes water out of the natural cycle by evaporation, <a href="https://water.usgs.gov/edu/watercycletranspiration.html">transpiration</a>, or incorporating into a product, while other uses return the water to rivers or aquifers (possibly after adding heat or contaminants) where it can be withdrawn again for another use. Of the water withdrawn for irrigation, 62 percent is evaporated or transpired by crops and won't re-enter the natural water cycle until the next rainfall, possibly far away from the point of water withdrawal. For thermoelectric power, consumptive use is 3 percent; the rest is returned to rivers or lakes, albeit warmer than before.
+    </p>
  
      <h3>Data Collection</h3>
  
 <p>
-Every 5 years since 1950, the USGS has compiled and estimated water-use information in cooperation with State, Federal, and local agencies to document how and where we use water. This information is essential to accurately understand how future water demands will be met, while maintaining adequate water quality and quantities for human and ecosystem needs. The fourteenth report in this series, [Estimated Use of Water in the United States in 2015], was released in May of 2018, along with the [county-level data] which supports the publication. The USGS Water Availability and Use Science Program hopes to produce higher spatial resolution and more frequent reports in the future. 
+Every 5 years since 1950, the USGS has compiled and estimated water-use information in cooperation with State, Federal, and local agencies to document how and where we use water. This information is essential to accurately understand how future water demands will be met, while maintaining adequate water quality and quantities for human and ecosystem needs. The fourteenth report in this series, <a href="NEEDLINK!">Estimated Use of Water in the United States in 2015</a>, was released in May of 2018, along with the <a href="NEEDLINK!">county-level data</a> which supports the publication. The <a href="https://www.usgs.gov/water-resources/water-availability-and-use-science-program">USGS Water Availability and Use Science Program</a> hopes to produce higher spatial resolution and more frequent reports in the future. 
  </p>
-<p>
-Water use in the United States in 2015 was estimated to be about 322,000 million gallons per day (Mgal/d), including fresh and saline groundwater and surface-water withdrawals. National water-use estimates are available for eight categories of water use for 2015.  The four largest categories (thermoelectric power, irrigation, public supply and self-supplied industrial), representing 95 percent of the total, can be explored individually in this visualization. The remaining four categories (domestic, livestock, aquaculture, and mining) are grouped together and shown on the pie chart view, and are included in the total. 
- </p>
-<p>
-The visualization shows total withdrawals for each county, though U.S. counties and county-equivalents range in land area from 2 square miles (the independent city of Falls Church, Virginia) to more than 145,000 square miles (Yukon-Koyukuk Census Area, Alaska). 
-    </p>
     
 
      <h3>References</h3>
